<resources>
    <string name="app_name">GoPickApp</string>
    <string name="app_key">AIzaSyAvKBLQX_ihb9dqZuuokNOFYhsBLMDeY5k</string>
    <string name="app_id">623806261122898</string>
    <string name="google_plus">AIzaSyDg_jLlXcjlvja4Je1xmCcnSq2PxqLzRLs</string>
    <string name="analytics">UA-97388866-1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="GoPickApp">GoPickApp</string>
    <string name="no_internet">No Internet Available.</string>
    <string name="Choose_language">Choose Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Welcome_order">WELCOME! ORDER FOOD FOR ONLINE FROM RESTAURANTS NEAR YOU AREA</string>
    <string name="Connect_fb">Continue with Facebook</string>
    <string name="Connect_gplus">Continue with Google+</string>
    <string name="Sign_with_email">Continue with the email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="Sign_in">Sign in</string>
    <string name="Explore_more_resaturant">Explore more restaurants</string>
    <string name="Choose_location">Choose your location</string>
    <string name="Show_restaurent">Show restaurants</string>
    <string name="Restaurants">Restaurants</string>
    <string name="deals">Deals</string>
    <string name="Orders">Orders</string>
    <string name="Account">Account</string>
    <string name="Setting">Settings</string>
    <string name="About_us">About us</string>
    <string name="Login_create">Login / Create account</string>
    <string name="Home">HOME</string>
    <string name="Search_for_reastaurant">Search for restaurants</string>
    <string name="Cusine">Cuisine</string>
    <string name="Time">Time</string>
    <string name="Rate">Rate</string>
    <string name="Description">Description</string>
    <string name="Best_price">Best price</string>
    <string name="Quantity">Quantity</string>
    <string name="total">TOTAL</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="Opening_hours">Opening hours</string>
    <string name="Call">Call</string>
    <string name="Review">Review</string>
    <string name="Order_online">ORDER ONLINE</string>
    <string name="Payment_methods">Payment methods</string>
    <string name="K_net">K-net</string>
    <string name="Cash">Cash</string>
    <string name="Credit_card">Credit card</string>
    <string name="Show_map">SHOW MAP</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Submit">Submit</string>
    <string name="Login">Login</string>
    <string name="Enter_Email_address">Please enter your email address</string>
    <string name="Enter_Password">Please enter your password</string>
    <string name="Enter_first_name">Please enter your first name</string>
    <string name="Enter_last_name">Please enter your last name</string>
    <string name="Enter_mobile">Please enter your mobile number</string>
    <string name="Invalid_mobile">Please enter valid mobile number</string>
    <string name="Enter_Confirm_password">Please confirm your password</string>
    <string name="Password_does_not_match">Password does not match</string>
    <string name="Invalid_email">Please enter valid email address</string>
    <string name="Please_Select_city">Please Select City</string>
    <string name="Restaurant_Info">Restaurant Info</string>
    <string name="filter">Filter</string>
    <string name="Clear_All">Clear All</string>
    <string name="Sort_by">Sort by</string>
    <string name="Rating">Rating</string>
    <string name="Relevance">Relevance</string>
    <string name="Pickup_time">Pickup time</string>
    <string name="Min_order">Min order</string>
    <string name="Cusines">Cuisines</string>
    <string name="Filter_by">Filter by</string>
    <string name="People_choice">People choice</string>
    <string name="Special_dishes">Special dishes</string>
    <string name="Discount">Discount</string>
    <string name="online_payment">Online payment</string>
    <string name="Availability">Availability</string>
    <string name="Apply_filter">Apply Filter</string>
    <string name="Logout">Logout</string>
    <string name="No_res_found">No Restaurant Found</string>
    <string name="Review_your_order">REVIEW YOUR ORDER</string>
    <string name="Item">Item</string>
    <string name="Qty">Qty</string>
    <string name="Price">Price</string>
    <string name="KD">KD</string>
    <string name="total_">Total</string>
    <string name="have_voucher_copoun">Have voucher/coupon?</string>
    <string name="Checkout">CHECKOUT</string>
    <string name="CART">CART</string>
    <string name="Product_details">Product Details</string>
    <string name="No_payment_methods">No Payment Methods</string>
    <string name="Add_payment_method">Add Payment Method</string>
    <string name="Review_your_cart">REVIEW YOUR CART</string>
    <string name="Place_order">Place Order</string>
    <string name="Edit_account">Edit Account</string>
    <string name="Change_pwd">Change Password</string>
    <string name="Old_pwd">Old Password</string>
    <string name="New_pwd">New Password</string>
    <string name="Confirm_pwd">Confirm Password</string>
    <string name="Check">Check</string>
    <string name="Enter_your_registred_email">Enter your registered email address</string>
    <string name="OTP_Code">OTP code</string>
    <string name="Verify">Verify</string>
    <string name="forgot_otp_msg">We have sent you an OTP code to your email id to verify your account.</string>
    <string name="Reset_pwd">Reset Password</string>
    <string name="Resend_otp">Resend OTP</string>
    <string name="Send_otp">Send OTP</string>
    <string name="Invalid_otp">OTP does not match</string>
    <string name="OTP">OTP</string>
    <string name="Enter_new_pwd">Please enter your new password</string>
    <string name="Enter_old_pwd">Please enter your old password</string>
    <string name="Forgot_pwd">Forgot password</string>
    <string name="Remove">Remove</string>
    <string name="No_data_found">No Data Found</string>
    <string name="PLACE_ORDER">PLACE ORDER</string>
    <string name="Payment_type">Payment Type</string>
    <string name="Remove_cart_popup">Your current order will be lost because you can only order from one restaurant at time.</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Change_language">Change Language</string>
    <string name="Your_order_no_is">Your Order no</string>
    <string name="Order_no">Order no</string>
    <string name="View_details">View Details</string>
    <string name="Terms_and_condition">Terms and Conditions</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="Date">Date</string>
    <string name="Status">Status</string>
    <string name="Total">Total</string>
    <string name="No_order_found">No Order Found</string>
    <string name="About">About</string>
    <string name="About_goPickApp">About GoPickApp</string>
    <string name="Change_res">Change restaurant?</string>
    <string name="Order_details">Order Details</string>
    <string name="Restaurant_name">Restaurant Name</string>
    <string name="Service_fee">Service</string>
    <string name="Welcome">Welcome</string>
    <string name="My_cart">My Cart</string>
    <string name="Payment_info">Payment Info</string>
    <string name="Kuwaiti_Dinner">Kuwaiti Dinner</string>
    <string name="Notification">Notification</string>
    <string name="No_notification_found">No Notification Found</string>
    <string name="Press_again_to_exit">Press again to exit</string>
    <string name="Res_address">Restaurant Address</string>
    <string name="Review_list">Review List</string>
    <string name="No_review_found">No Reviews Found</string>
    <string name="Select_your_area">Select Your Area</string>
    <string name="Enter_your_copoun_code">Enter Your Coupon Code</string>
    <string name="Coupon_discount">Coupon Discount</string>
    <string name="Service_tax">Service Tax</string>
    <string name="Thanks_for_choosing_goPickapp">Thanks for choosing GoPickApp.</string>
    <string name="Order_Packaging">Order Packaging</string>
    <string name="Preparation_time">Preparation Time</string>
    <string name="Quality_of_food">Quality of food</string>
    <string name="Feedabck">Feedback</string>
    <string name="Please_rate_in_order_packaging">Please rate in Order Packaging</string>
    <string name="Please_rate_in_preparation_time">Please rate in Preparation Time</string>
    <string name="Please_rate_in_quality_of_food">Please rate in Quality of Food</string>
    <string name="Please_enter_comments">Please enter comments</string>
    <string name="My_orders">My Orders</string>
    <string name="Existing_order">Existing Order</string>
    <string name="Order_history">Order History</string>
    <string name="Reorder">Reorder</string>
    <string name="Kindly_wait_confirmation">Kindly wait for the confirmation.</string>
    <string name="Password_should_be_more_than_6_digit">Minimum 6 characters are required</string>
    <string name="Search_your_area">Search Your Area</string>
    <string name="Old_and_new_password_are_Same">Old Password and new Password are same</string>
    <string name="Right_now_closed">Right now this restaurant is closed.</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Continue">Continue</string>
    <string name="Map">Map</string>
    <string name="Choose_area">Choose your area</string>
    <string name="Promocode_applied">Promocode Applied!!!</string>
    <string name="you_have_already_used_this_copoun_code">You have already used this coupon code.</string>
    <string name="Select_any_Payment_method">Select any Payment method</string>
    <string name="PickApp">PICKAPP</string>
    <string name="Enter_promocode_voucher">Enter Promocode/Voucher</string>
    <string name="Apply">APPLY</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Please_enter_any_promocode">Please enter any promocode</string>
    <string name="Continue_as_guest">Continue as a guest user</string>
    <string name="Basic_Information">Basic Information</string>
    <string name="Your_order_number_is">Your order number is</string>
    <string name="Search_For_Reastaurant">Search for restaurants</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Are_you_sure_cancel">Are you sure you want to cancel this order?</string>
    <string name="Choose_payment_method">Choose Payment Method</string>
    <string name="Rate_your_order">Rate your order</string>
    <string name="Please_give_rating_yor_order">Please give rating to your order</string>
    <string name="Please_enter_review">Please enter review</string>
    <string name="Order_confirmation">Order Confirmation</string>
    <string name="Order_number">Order Number</string>
    <string name="Payment_method">Payment Method</string>
    <string name="VIEW_ORDER">VIEW ORDER</string>
    <string name="exit_popup">Are you sure you want to exit?</string>
    <string name="Edit">Edit</string>
    <string name="Change">Change</string>
    <string name="Update">Update</string>
    <string name="Review_added_successfully">Review added successfully</string>
    <string name="Special_Instruction">Special Instructions</string>
    <string name="Add_note">Add a special request to this item thats suits you</string>
    <string name="Select_your_location">Swipe to Explore Restaurants around you</string>
</resources>