<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/Firstname"
                android:inputType="text"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/Lastname"
                android:inputType="text"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/Mobile"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20dp"
            android:orientation="vertical">

            <go.pickapp.Controller.Textview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="right"
                android:text="@string/Change_pwd"
                android:textColor="@color/White"
                android:textSize="@dimen/_12sp" />

            <View
                android:layout_width="@dimen/_90dp"
                android:layout_height="0.5dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_10dp"
                android:background="@color/White" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rr_Edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/Red">


            <go.pickapp.Controller.Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/Edit_account"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sp" />


        </RelativeLayout>

    </LinearLayout>


</ScrollView>