<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/Old_pwd"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/New_pwd"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="8dp"
            app:theme="@style/MyEditTextTheme">

            <go.pickapp.Controller.Edittext
                android:id="@+id/input_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/White"
                android:hint="@string/Confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:id="@+id/rr_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/Red">


            <go.pickapp.Controller.Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/Change_pwd"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sp" />


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>